<resources>
    <string name="app_name">建谈</string>
    <string name="http_error">网络异常</string>
    <string name="loading_text">正在加载…</string>
    <string name="error_text">加载出错，请点击重试~</string>
    <string name="discover">发现</string>
    <string name="circle">圈子</string>
    <string name="talk">谈主</string>
    <string name="mine">我的</string>
    <string name="look_at_all">查看全部</string>
    <string name="look_more">查看更多</string>
    <string name="top_tic">热门话题圈</string>
    <string name="change">换一换</string>
    <string name="course">精品课程</string>
    <string name="good_project">精彩专题</string>
    <string name="TIMESTAMP">timestamp</string>
    <string name="SIGN">sign</string>
    <string name="wallet">我的钱包</string>
    <string name="online_service">在线客服</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="setting">设置</string>
    <string name="search_talk">搜索名字</string>
    <string name="industry_higher_ups">行业大咖</string>
    <string name="sentiment_ring_main">人气圈主</string>
    <string name="double_click_exit_toast">再按一次退出</string>
    <string name="PAGE">page</string>
    <string name="PAGE_SIZE">page_size</string>
    <string name="exquisite_article">精品文章</string>
    <string name="personal_introduction">个人介绍</string>
    <string name="search_history">搜索历史</string>
    <string name="search_name">搜索名字</string>
    <string name="search_circle">搜索圈子</string>
    <string name="circle_dialog_content">包含时政、低俗、色情、暴力引诱等敏感或违禁内容的圈子，将会被封停圈子和账号!</string>
    <string name="circle_rules">圈主规则</string>
    <string name="theme">主题</string>
    <string name="essence">精华</string>
    <string name="footer_circle_text">加入圈子可以浏览更多内容</string>
    <string name="login_phone">手机号登陆</string>
    <string name="login_wechat">微信登录</string>
    <string name="phone_tv">手机号</string>
    <string name="verify_str">验证码</string>
    <string name="getcode_str">获取验证码</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="about_us">关于我们</string>
    <string name="version_info">版本信息</string>
    <string name="person_page">个人主页</string>
    <string name="person_info">个人信息</string>
    <string name="higher_ups_certification">大咖认证</string>
    <string name="transaction_list">交易明细列表</string>
    <string name="cancle">取消</string>
    <string name="circle_member">圈子成员</string>
    <string name="quit_login">退出登录</string>
    <string name="login">点击登录</string>
    <string name="login_more_look">登录后，可预览更多内容哦～</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
</resources>
