<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.bjjy.buildtalk.ui.mine.SettingActivity">
    <include layout="@layout/toolbar_layout"/>
    <RelativeLayout
        android:id="@+id/bind_wechat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/item_selector">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_wechat"
            android:textColor="@color/text_drak"
            android:textSize="@dimen/sp_15"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"/>
        <ImageView
            android:id="@+id/view1"
            android:layout_width="@dimen/dp_13"
            android:layout_height="@dimen/dp_13"
            android:src="@drawable/arrow_right_black"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/common_margin"/>
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_mid"
            android:text="@string/app_name"
            android:layout_toLeftOf="@+id/view1"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/border3"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/item_selector">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/text_drak"
            android:textSize="@dimen/sp_15"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"/>
        <ImageView
            android:layout_width="@dimen/dp_13"
            android:layout_height="@dimen/dp_13"
            android:src="@drawable/arrow_right_black"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/common_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/border3"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/version_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/item_selector">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_info"
            android:textColor="@color/text_drak"
            android:textSize="@dimen/sp_15"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"/>
        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V2.0"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_mid"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/common_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/border3"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/quit_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:text="@string/quit_login"
        android:textColor="@color/text_drak"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:background="@drawable/shape_gray_5radius"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="@dimen/dp_40"/>
</LinearLayout>
