<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.bjjy.buildtalk.ui.main.PhoneLoginActivity">
    <TextView
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phone"
        android:textColor="@color/text_drak"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"/>
    <RelativeLayout
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/view1"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40">
        <ImageView
            android:id="@+id/view2"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:src="@drawable/phone_icon" />
        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/view2"
            android:inputType="number"
            android:background="@null"
            android:hint="@string/phone_tv"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_mid"
            android:textColorHint="@color/text_mid"
            android:layout_marginLeft="@dimen/dp_10"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/border3"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/view3"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40">
        <ImageView
            android:id="@+id/view4"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:src="@drawable/verify_icon" />
        <EditText
            android:id="@+id/verify_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/view4"
            android:layout_toLeftOf="@+id/code_btn"
            android:inputType="number"
            android:background="@null"
            android:hint="@string/verify_str"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_mid"
            android:textColorHint="@color/text_mid"
            android:layout_marginLeft="@dimen/dp_10"/>
        <Button
            android:id="@+id/code_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/getcode_str"
            android:textColor="@color/border1"
            android:textSize="13sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/border3"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/shape_blue_25button"
        android:text="登录"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/white"
        android:gravity="center"
        android:alpha="0.4"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_below="@id/view5"
        android:layout_marginTop="@dimen/dp_70"/>

</RelativeLayout>
