<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_15">

    <RelativeLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/icon1"
            android:layout_width="@dimen/dp_3"
            android:layout_height="@dimen/dp_17"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:background="@color/blue_mid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_11"
            android:layout_toRightOf="@+id/icon1"
            android:includeFontPadding="false"
            android:text="@string/industry_higher_ups"
            android:textColor="@color/text_drak"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/master_all_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/icon1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/common_margin"
            android:includeFontPadding="false"
            android:text="@string/look_at_all"
            android:textColor="@color/text_mid"
            android:textSize="@dimen/sp_11" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/master_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_8"
        android:overScrollMode="never" />

    <LinearLayout
        android:id="@+id/master_change_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/master_recyclerView"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/master_change_iv"
            android:layout_width="@dimen/dp_33"
            android:layout_height="@dimen/dp_13"
            android:src="@drawable/change_icon"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textColor="@color/text_light"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>


</RelativeLayout>