<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:overScrollMode="never"
    app:srlEnableLoadMore="false"
    app:srlEnableOverScrollDrag="true"
    app:srlEnableRefresh="false">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/info_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_150"
                android:background="@color/blue_mid">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/face_iv"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginTop="@dimen/dp_64"
                    android:scaleType="centerCrop"
                    android:src="@drawable/moren_face"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/dp_2" />

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/face_iv"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_toRightOf="@+id/face_iv"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_tv"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_toRightOf="@+id/face_iv"
                    android:includeFontPadding="false"
                    android:text="@string/login_more_look"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/info_iv"
                    android:layout_width="@dimen/dp_33"
                    android:layout_height="@dimen/dp_33"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_78"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/arrow_right_white_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wallet_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@drawable/item_selector"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/mine_wallet_iv"
                    android:drawablePadding="@dimen/dp_15"
                    android:text="@string/wallet"
                    android:textColor="@color/text_mine"
                    android:textSize="@dimen/sp_15" />

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_13"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right_black" />

                <TextView
                    android:id="@+id/wallet_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/common_margin"
                    android:layout_toLeftOf="@+id/icon1"
                    android:text="0.00"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/sp_15" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10" />

            <RelativeLayout
                android:id="@+id/buy_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@drawable/item_selector"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/buy_icon"
                    android:drawablePadding="@dimen/dp_15"
                    android:text="已购"
                    android:textColor="@color/text_mine"
                    android:textSize="@dimen/sp_15" />

                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_13"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right_black" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/background" />

            <RelativeLayout
                android:id="@+id/set_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@drawable/item_selector"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/mine_set_icon"
                    android:drawablePadding="@dimen/dp_15"
                    android:text="@string/setting"
                    android:textColor="@color/text_mine"
                    android:textSize="@dimen/sp_15" />

                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_13"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right_black" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/background" />

            <RelativeLayout
                android:id="@+id/help_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@drawable/item_selector"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/mine_help_icon"
                    android:drawablePadding="@dimen/dp_15"
                    android:text="@string/problem_feedback"
                    android:textColor="@color/text_mine"
                    android:textSize="@dimen/sp_15" />

                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_13"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right_black" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/background" />

            <RelativeLayout
                android:id="@+id/service_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@drawable/item_selector"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/mine_service_icon"
                    android:drawablePadding="@dimen/dp_15"
                    android:text="@string/online_service"
                    android:textColor="@color/text_mine"
                    android:textSize="@dimen/sp_15" />

                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_13"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right_black" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>



